--- a/javascript/기본.md
+++ b/javascript/기본.md
@@ -1,1 +1,158 @@
+### Javascript 연산자  
 
+```javascript
+<script>
+  document.write("재미있는 자바스크립트" + "<br />");
+  //객체 , 메서드(); -객체기반언어
+  //object.method();
+  var 변수명;
+  var num = 10;
+  var num = num / 2;
+  document.write(num + "<br /");
+  //변수명 작성시 주의사항
+  //대소문자 구분
+  //변수명앞에 영문, _,$
+  //변수명에는 영문, 숫자, _,$
+  var firstNum = 100;
+  var nextNum = 2;
+  var result = firstNum + nextNum;
+  document.write(result + "<br /");
+  //변수에 저장 가능한 데이터 타입
+  var txt1 = "자바스크립트";//문자형 string
+  var txt2 = '10';
+  var num = 10; //숫자형 Number
+  var result = true; //논리형 bool
+  var result = null; //널형 null , 비어있음.
+  ```
+  
+  
+```javascript
+<script>
+  //연산자 - 산술연산자,이항연산자 '+,-,*,/,%'
+  var A = 10;
+  var B = 3;
+  var result;
+  result = A + B;
+  document.write(result + "<br /");
+  result = A - B;
+  document.write(result + "<br /");
+  result = A * B;
+  document.write(result + "<br /");
+  result = A / B;
+  document.write(result + "<br /");
+  result = A % B;
+  document.write(result + "<br /");
+  
+  //대입 연산자
+  // =,+=,-=,*=,/=,%=
+  var NumA = 10;
+  var NumB = 20;
+  NumA += 5; // NumA = NumA + 5;
+  document.write(NumA + "<br />");
+  NumA -= 5; // NumA = NumA - 5;
+  document.write(NumA + "<br />");
+  NumA *= 5; // NumA = NumA * 5;
+  document.write(NumA + "<br />");
+  NumA /= 5; // NumA = NumA / 5;
+  document.write(NumA + "<br />");
+  NumB %= 3; // NumB = NumB % 3;
+  document.write(NumB + "<br />");
+  //증감연산자 ++ 1씩 증가, --1씩 감소
+  var NumA = 10;
+  var NumB = 20;
+  NumA++; // ++NumA  
+  document.write(NumA + "<br />"); //11
+  NumB--;
+  document.write(NumB + "<br />");  //19
+  
+  //논리연산자 ||논리합(or), &&논리곱(and), !논리부정 - true참1,flase거짓0
+  //true || true -> true
+  //true || false -> true
+  //false || false -> false
+  //true && true -> true
+  //true && false -> false
+  //false && false -> false
+  var A = 10;
+  var B = 20;
+  var C = 30;
+  var D = 40;
+  var num1 = A > B;
+  var num2 = C >= D;
+  var a = num1 || num2;
+  document.write(a + "<br/>");
+  var b = num1 && num2;
+  document.write(b + "<br/>");
+  var c = !num1;
+  document.write(c + "<br/>");
+  var num1 = A >= B;
+  var num2 = C <= D;
+  var d = num1 || num2;
+  document.write(d + "<br/>");
+  var e = num1 && num2;
+  document.write(e + "<br/>");
+  var f = !num1;
+  document.write(f + "<br/>");
+  var num1 = A <= B;
+  var num2 = C < D;
+  var g = num1 || num2;
+  document.write(g + "<br/>");
+  var h = num1 && num2;
+  document.write(h + "<br/>");
+  var i = !num1;
+  document.write(i + "<br/>");
+ </script>
+  ```
+  
+  
+```javascript
+<script>
+  // 문제 - 20대 여성이면 true
+  //prompt 메서드
+  //prompt("질문내용", "기본답변제시"); -당신의 성별은? 여성
+  //prompt("질문내용", "기본답변제시"); -당신의 나이는? 20
+  var gender = prompt("당신의 성별은?", "여성")
+  console.log(gender);
+  var age = prompt("당신의 나이는?", "20");
+  console.log(age);
+  var result = gender == "여성" && age >= 20 && age < 30
+  document.write("결과:" + result + "<br />");
+  //국어,영어,수학 점수 입력 받고,
+  //평균이 70이상 이고 각 과목점수가 60이상이면 true
+  var korNum = Number(prompt("국어점수는?", "0")); 
+  var engNum= Number(prompt("영어점수는?", "0"));
+  var mathNum= Number(prompt("수학점수는?", "0")); 
+  var avg = (korNum + engNum + mathNum) / 3;
+  var result2 = avg >= 70 && korNum >=60 && engNum >=60 && mathNum >=60;
+  document.write(result2 + "<br />");
+</script>
+```
+
+
+```javascript
+<script>
+  //문자 결합 연산자
+  //"문자" + "문자" , "문자" + "숫자", String(숫자) + 숫자
+  var txt1 = "아름다운";
+  var txt2 = "우리강산";
+  document.write(txt1 + txt2 + "<br/>");
+  var txt1 = "은하철도";
+  var txt2 = 999;
+  document.write(txt3 + txt4 + "<br/>");
+  var num1 = 200;
+  var num2 = 300;
+  var txt5 = String(num1); //200
+  document.write(num1 + num2 + txt5 + "<br/>");
+  var addText = "2002 월드컵";
+  addText += "대한민국";
+  addText += "짝짝~짝짝짝~!!";
+  document.write( addText + "<br/>");
+  //조건 연산자, 삼항 연산자, 조건식? 실행문1 : 실행문2:
+  var num1=30;
+  var num2=20;
+  num1 >= num2 ? alert("참이다") : alert("거짓이다");
+  //confirm("내용"), 확인 - true값 반환, 취소 - false 값 반환
+  var result = confirm("Do you like Javascript?");
+  var theText = result ? "good" : "No-good";
+  document.write(theText);
+</script>
+```
