--- a/javascript/1.연산자.md
+++ b/javascript/1.연산자.md
@@ -1,5 +1,6 @@
 ### Javascript 연산자  
 
+* 객체 , 메서드(); -객체기반언어
 ```javascript
 <script>
   document.write("재미있는 자바스크립트" + "<br />");
@@ -25,7 +26,7 @@
   var result = null; //널형 null , 비어있음.
   ```
   
-  
+* 연산자 - 산술연산자,이항연산자
 ```javascript
 <script>
   //연산자 - 산술연산자,이항연산자 '+,-,*,/,%'
@@ -103,7 +104,7 @@
  </script>
   ```
   
-  
+* prompt 메서드
 ```javascript
 <script>
   // 문제 - 20대 여성이면 true
@@ -127,7 +128,7 @@
 </script>
 ```
 
-
+* 문자 결합 연산자
 ```javascript
 <script>
   //문자 결합 연산자
