--- a/javascript/4.반복문.md
+++ b/javascript/4.반복문.md
@@ -1,1 +1,130 @@
+### Javascript 반복문  
 
+* while문
+```javascript
+<script>
+/*
+while문- 특정 조건을 만족하는 동안 실행문을 반복적으로 수행
+var i = 초기값;
+while(조건식) {
+  실행문;
+  증감식;
+}
+ */
+ 
+var i=1;
+while(i<10) {
+  document.write(i + "<br/>");
+  i++
+}
+
+//10부터 1까지 내림차순으로 2의 배수만 출력
+var j = 10;
+while(j>0) {
+  if (j % 2 ==0 ) {
+    document.write(j + "<br/>");
+  }
+  j--;
+}
+
+//1부터 100까지 3의 배수만 출력
+var k = 1;
+while(k >= 101) {
+  if (k % 3 == 0) {
+    document.write(k + "<br/>");
+  }
+  k++;
+}
+</script>
+```
+
+* for 문
+```javascript
+<script>
+/*for 문
+for(var k=초기값; 조건식 ; 증감식) {
+  실행문;
+}
+*/
+//1,2,3,4,5,6,7,8,9,10
+for(var k =1; k<=10; k++) {
+  document.write(k + "<br/>");
+}
+//10부터 1까지 내림차순으로 2의 배수만 출력
+for(var i =10; i>0; i--) {
+  if (i % 2 == 0)
+  document.write(i + "<br/>");
+}
+</script>
+```
+
+* for 문 예시  
+```javascript
+<script>
+/*
+h6 즐거운 금요일 !!
+h5 즐거운 금요일 !!
+h4 즐거운 금요일 !!
+h3 즐거운 금요일 !!
+h2 즐거운 금요일 !!
+h1 즐거운 금요일 !!
+*/
+for(var k=6; k>0; k--) {
+  document.write("h"+ k+ "즐거운 금요일!!" + "<br/>"); //변수앞뒤 "",+
+}
+/*
+<h1>h1 즐거운 금요일!!</h1>
+<h2>h2 즐거운 금요일!!</h2>
+<h3>h3 즐거운 금요일!!</h3>
+<h4>h4 즐거운 금요일!!</h4>
+<h5>h5 즐거운 금요일!!</h5>
+<h6>h6 즐거운 금요일!!</h6>
+*/
+for(var k = 1; k < 7; k++) {
+   document.write("<h"+ k+ ">k" + k+ "즐거운 금요일!! + </h"+k+">");
+}
+    
+//이미지 반복 출력
+for (var i =0; i <=19; i++) {
+  document.write("<img src='images2/quick01_"+i+".png' alt='"+i+"'>")
+}
+		
+var dan =2;
+var result;
+document.write("<h1>" + dan + "단<h1");
+for (var j = 1; j <= 9; j++) {
+  result = dan * j;
+  document.write(" 2X " + j + " = " + result + "<br>");
+}
+// 중첩 for문
+for (var i = 1; i <= 9; i++) {
+   document.write("<h3>" + i + "단</h3>");  //2~9단
+  for (var j = 1; j <= 9; j++) {  //1~9곱하기
+   document.write(i +" X " + j + " = " + (i*j) + "<br>");
+  }
+}
+</script>
+```
+
+* break 문
+```javascript
+<script>
+//해당 반복문을 종료
+for(var i=1; i<11; i++) {
+ document.write(i + "<br>");
+ if(i == 5) break;
+}
+
+</script>
+```
+
+* continue 문
+```javascript
+<script>
+//반복문이 continue문을 만나면 더 이상 실행문을 수행하지 않고 증감식으로 돌아가서 실행문 반복한다.
+for(var i=1; i<11; i++) {
+ if(i%2 ==1) continue;
+ document.write(i + "<br>"); 
+}
+</script>
+```
