--- a/javascript/5.배열.md
+++ b/javascript/5.배열.md
@@ -24,28 +24,89 @@ push(값) 마지막 인덱스에 새데이터 중첩하여 추가
 */
 </script>
 ```
-
+* 배열 메서드 
 ```javascript
 <script>
+var userName = new Array();
+userName[0] ="사과";
+userName[1] ="참외";
+userName[2] ="바나나";
+userName[3] ="수박";
+userName[4] ="오렌지";
+userName[5] ="귤";
+console.log(userName);
+var idx = Math.floor(Math.random()*5+0);
+document.write(userName[idx] + "<br/>");
+    
+var theFood = ["짜장면","냉면","갈비탕","돈까스","삼겹살"];
+var idx = Math.floor(Math.random(1)*5+0);
+document.write(theFood[idx] + "<br/>");
+var today = new Date();
+var nowDay = today.getDay(); //0일요일~6토요일
+var days = new Array("일","월","화","수", "목","금","토","일");
+//더 간단한 방법 : var days =["일","월","화","수", "목","금","토","일"]
+console.log(days);
+document.write("오늘은" + days[nowDay] + "요일 입니다." + "<br/>");
+    
+var money = [100,100,200,50];
+var total = 0;
+for (var i=0; i < money.length; i++) {
+ //total = total + money[i];
+ total += money[i];
+}
+document.write(total + "<br/>");
+var theFood = ["짜장면","냉면","갈비탕","돈까스","삼겹살"];
+theFood.reverse();  //역순으로 나타냄
+console.log(theFood);
+var theSubway = ["2호선","9호선","7호선","4호선","3호선"];
+theSubway.sort();
+console.log(theSubway);
+var userName = ["박헤현","백정원","성예린","송경민","이다경"];
+var result = userName.slice(2,4);
+console.log(result);
+var Mountain1 = ["백두산","청계산", "한라산","광교산","설악산"]
+var Mountain2 = ["지리산","남산", "북한산","관악산"]
+var joinResult = Mountain1.concat(Mountain2);
+console.log(joinResult);
+var theProduct = ["냉장고","컴퓨터","선풍기","밥솥","핸드폰"];
+var joinResult = theProduct.join("-");
+console.log(joinResult);
+    
+var theSubway = ["2호선","9호선","7호선","4호선","3호선"];
+var new_ine1 ="1호선";
+var new_ine2 = "분당선";
+console.log(theSubway);
+theSubway.shift();
+console.log(theSubway);
+theSubway.pop();
+console.log(theSubway);
+theSubway.unshift(new_ine1);
+console.log(theSubway);
+theSubway.push(new_ine2);
+console.log(theSubway);
 </script>
 ```
 
-```javascript
-<script>
-</script>
-```
 
+* 배열 예제 : 로또번호 생성
 ```javascript
 <script>
-</script>
-```
-
-```javascript
-<script>
-</script>
-```
-
-```javascript
-<script>
+/*로또번호 생성*/
+var myLotto = []; //로또 번호 저장
+var aryLotto = []; //1~45까지 번호 저장, aryLotto = [1]이 저장됨
+var idx = 0;
+for (var i =1; i < 46; i++) {  
+  aryLotto.push(i);
+}
+console.log(aryLotto);
+while (myLotto.length < 6) {
+  idx = Math.floor(Math.random()*aryLotto.length+0); //0이 줄어짐
+  myLotto.push(aryLotto[idx]);
+  aryLotto.splice(idx,1); //idx 부터 1개 삭제
+}
+    
+for(k=0; k<6; k++) {
+  document.write("번호" + k+ ": " + myLotto[k] + "<br/>");
+}
 </script>
 ```
